refactor: 重构物品操作账本与调试日志系统，统一添加调试支持
本次提交完成多项核心重构：
1. 为ItemOperationLedger添加调试日志支持，允许传入debugLogger实例
2. 多个业务服务类（ForgeService、GemInlayService等）改为传入插件debugLogger
3. 重构DebugCommand，统一模块名小写并添加共享调试模块
4. 优化DebugLogger的模块匹配逻辑，新增raw日志输出方法
5. 重构OperationTemplateRenderer，优化操作列表解析逻辑
6. 为Forge相关服务添加统计变量构建方法，统一模板变量生成
7. 为ItemOperationExecutor和ActionExecutor添加详细调试日志
8. 优化ForgeItemRefreshService和ForgeResultPostProcessor的变量生成逻辑，复用代码